--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -12,7 +12,6 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -28,6 +27,14 @@
             android:name=".MusicJockeyActivity"
             android:label="@string/title_activity_music_jockey" >
         </activity>
+        <activity
+            android:theme="@style/Theme.AppCompat.Light"
+            android:name=".ListenerSettingsActivity"
+            android:parentActivityName="com.play4u.mobile.ListenerActivity"
+            android:label="@string/title_activity_listener_settings" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.play4u.mobile.ListenerActivity" />
+        </activity>
     </application>
-
 </manifest>
