--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,12 @@ android {
 }
 
 dependencies {
+    /*
+    Already included by Android
     compile 'org.apache.httpcomponents:httpclient:4.5'
     compile 'org.apache.httpcomponents:httpasyncclient:4.1'
     compile 'org.apache.httpcomponents:httpcore:4.4.1'
-    compile 'org.apache.commons:commons-lang3:3.4'
     compile 'org.json:json:20141113'
+    */
+    compile 'org.apache.commons:commons-lang3:3.4'
 }
