--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'org.json:json:20141113'
     */
     compile 'org.apache.commons:commons-lang3:3.4'
+    compile 'com.google.android.gms:play-services-location:7.5.0'
 }
