--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,6 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -50,9 +49,16 @@
                 android:value=".activities.ListenerActivity" />
         </activity>
         <activity
+            android:name=".activities.MusicJockeySettingsActivity"
+            android:label="Settings"
+            android:parentActivityName=".activities.MusicJockeyActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.MusicJockeyActivity" />
+        </activity>
+        <activity
             android:name=".activities.LoadingErrorActivity"
             android:label="@string/title_activity_loading_error" >
         </activity>
     </application>
-
 </manifest>
