--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
     }
 }
 
+
 dependencies {
     /*
     Already included by Android
@@ -30,4 +31,12 @@ dependencies {
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'com.google.android.gms:play-services-location:7.5.0'
     compile 'com.google.android.gms:play-services-maps:7.5.0'
+    compile(name:'spotify-web-api-android-0.1.1', ext:'aar')
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.okhttp:okhttp:2.2.0'
+
+    // Unit testing dependencies
+    testCompile 'org.testng:testng:6.9.4'
+    testCompile 'org.mockito:mockito-core:1.10.19'
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
 }
