--- a/build.gradle
+++ b/build.gradle
@@ -15,5 +15,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        mavenCentral()
+        flatDir {
+            dirs "$rootProject.projectDir/app/lib"
+        }
     }
 }
